--- a/4/index1.html
+++ b/4/index1.html
@@ -121,14 +121,14 @@ window.onresize = resize;
 close
 </button>
 </div>
-<iframe src="http://www.corona13.com/gallery.php" name="Coronagallery" frameborder="0" allowtransparency="false" scrolling="yes" height="90%" width="100%"></iframe>
+<iframe src="./gallery.php" name="Coronagallery" frameborder="0" allowtransparency="false" scrolling="yes" height="90%" width="100%"></iframe>
 
 
 </div>
 <div id="specialBoxC">
 <div style="margin-left:92%">
 <button onmousedown="toggleOverlay2()">Close</button></div>
-<iframe src="http://www.corona13.com/team_oc/index.html" name="CoronaTeam" scrolling="yes" frameborder="0" allowtransparency="false" height="100%" width="100%"></iframe>
+<iframe src="../team_oc/index.html" name="CoronaTeam" scrolling="yes" frameborder="0" allowtransparency="false" height="100%" width="100%"></iframe>
 
 
 </div>
@@ -137,7 +137,7 @@ close
 	<div id="specialBoxS">
 <div style="margin-left:92%">
 <button onmousedown="toggleOverlay3()">Close</button></div>
-<iframe src="http://www.corona13.com/sponsor/" name="sponsor" scrolling="yes" frameborder="0" allowtransparency="false" height="100%" width="100%"></iframe>
+<iframe src="../sponsor/" name="sponsor" scrolling="yes" frameborder="0" allowtransparency="false" height="100%" width="100%"></iframe>
 
 
 </div>
@@ -146,8 +146,8 @@ close
 <div id="wrapper1">
 	<div style="float:left; position:absolute;">
 				<audio controls autoplay loop>
-    <source src="http://www.corona13.com/sound.mp3" type="audio/mp3" preload="auto">
-        <source src="http://www.corona13.com/sound.ogg" type="audio/ogg" preload="auto">
+    <source src="../sound.mp3" type="audio/mp3" preload="auto">
+        <source src="../sound.ogg" type="audio/ogg" preload="auto">
 
 </audio>
 						
@@ -158,7 +158,7 @@ close
     	<ul>
     
         	<li>
-            	<a href="http://www.corona13.com/register/" target="_blank">        	
+            	<a href="../register/" target="_blank">        	
                 	<h3 class="headline">Register</h3>
                     <h4 class="description">Register Now !!</h4>
            		</a>
@@ -186,19 +186,19 @@ close
             	</a>
             </li>
 				<li>
-            	<a href="http://www.corona13.com/schedule.pdf" target="_blank">
+            	<a href="../schedule.pdf" target="_blank">
                 	<h3 class="headline" >Schedule</h3>
                     <h4 class="description">Schedule of Events !!</h4>
             	</a>
             </li>
 				<li>
-            	<a href="http://www.corona13.com/head.pdf" target="_blank">
+            	<a href="../head.pdf" target="_blank">
                 	<h3 class="headline" >Event Heads</h3>
                     <h4 class="description">Event Heads !!</h4>
             	</a>
             </li>
 			<li>
-            	<a href="http://www.corona13.com/social/" target="_blank">
+            	<a href="../social/index.html" target="_blank">
                 	<h3 class="headline" >Developers</h3>
                     <h4 class="description">Meet The Coders </h4>
             	</a>
