--- a/4/index1.html
+++ b/4/index1.html
@@ -1,6 +1,6 @@
 	<head>
 	<link rel="shortcut icon" href="http://www.corona13.com/favicon.ico"/> 
-			<title>Bpit Presents Corona 13 | The Annual techno-cultural fest</title>
+			<title>BPIT Presents Corona 13 | The Annual techno-cultural fest</title>
 	<meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="no-cache">
 <meta http-equiv="Expires" content="-1">
@@ -160,7 +160,7 @@ close
         	<li>
             	<a href="../register/" target="_blank">        	
                 	<h3 class="headline">Register</h3>
-                    <h4 class="description">Register Now !!</h4>
+                    <h4 class="description">Register Now !!!</h4>
            		</a>
             </li>
 
@@ -188,19 +188,19 @@ close
 				<li>
             	<a href="../schedule.pdf" target="_blank">
                 	<h3 class="headline" >Schedule</h3>
-                    <h4 class="description">Schedule of Events !!</h4>
+                    <h4 class="description">Schedule of Events</h4>
             	</a>
             </li>
 				<li>
             	<a href="../head.pdf" target="_blank">
                 	<h3 class="headline" >Event Heads</h3>
-                    <h4 class="description">Event Heads !!</h4>
+                    <h4 class="description">Event Heads are:</h4>
             	</a>
             </li>
 			<li>
             	<a href="../social/index.html" target="_blank">
                 	<h3 class="headline" >Developers</h3>
-                    <h4 class="description">Meet The Coders </h4>
+                    <h4 class="description">Meet The Coders: </h4>
             	</a>
             </li>
         </ul>
